# litestar-keycloak

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  TESTING.md  compose.test.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  configuration.md  index.md
docs/guides/: guards.md  oidc-routes.md  service-to-service.md  testing.md
examples/: Dockerfile  README.md  docker-compose.yml  test.sh
examples/app/: main.py
src/litestar_keycloak/: __init__.py  __main__.py  auth.py  config.py  dependencies.py  exceptions.py  guards.py  http_client.py  main.py  models.py  plugin.py  routes.py  token.py
tests/: __init__.py  conftest.py  test_main.py  test_plugin.py  test_routes.py
tests/fixtures/: realm-export.json
tests/integration/: conftest.py  test_cookie_token_integration.py  test_guards_integration.py  test_jwks_refresh.py  test_oidc_flow.py  test_routes_integration.py  test_scenarios.py  test_token_validation.py
tests/unit/: conftest.py  test_auth.py  test_config.py  test_dependencies.py  test_exceptions.py  test_guards.py  test_http_client.py  test_jwks_cache.py  test_models.py  test_token.py
