[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litestar-keycloak"
version = "0.1.0"
description = "Keycloak OIDC/OAuth2 authentication plugin for Litestar"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Maksim Smirnov", email = "smirnoffmg@gmail.com" }]
keywords = ["litestar", "keycloak", "oidc", "oauth2", "authentication", "jwt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["litestar>=2.0", "aiohttp>=3.9", "PyJWT[crypto]>=2.0"]

[project.urls]
Homepage = "https://github.com/smirnoffmg/litestar-keycloak"
Documentation = "https://smirnoffmg.github.io/litestar-keycloak/"
Repository = "https://github.com/smirnoffmg/litestar-keycloak"
Issues = "https://github.com/smirnoffmg/litestar-keycloak/issues"
Changelog = "https://github.com/smirnoffmg/litestar-keycloak/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/litestar_keycloak"]

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "testcontainers[keycloak]>=4.0",
]
lint = ["ruff>=0.8", "mypy>=1.13", "pre-commit>=4.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.27"]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TC"]
ignore = [
    "B008", # function call in default argument (Litestar's Provide pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["litestar_keycloak"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
packages = ["src/litestar_keycloak"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not integration' --timeout=30"
pythonpath = ["src"]
markers = ["integration: requires Keycloak container"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["litestar_keycloak"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "\\.\\.\\."]
